--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/common": "^10.4.20",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/devtools-integration": "^0.1.6",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "^6.13.0",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^7.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "connect-pg-simple": "^10.0.0",
@@ -42,6 +46,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-magic-link": "^2.1.1",
+    "pg-promise": "^11.15.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
